--- a/report/2_process_perspective.tex
+++ b/report/2_process_perspective.tex
@@ -61,7 +61,7 @@ We incorporated retrospectives from Scrum every Tuesday before we began working 
 We used Github Actions to implement our CI/CD. Our CI/CD consists of test, deploy, release, and code quality analyzer. We used Trunk Based Development where every developer shared the same trunk branch. Every developer pushed to the main branch for efficiency. Upon push Github Actions will run the following steps:
 
 \subsubsection{Code quality analyzer}
-SonarCloud was used for code quality analyzer to analyze the technical debt of the code base. Our repository contains badges with information about the technical debt, security, vulnerabilities, and bugs based on the latest commit to SonarCloud.
+SonarCloud was used for code quality analyzer to analyze the technical debt of the code base. Our repository contains badges with information about the technical debt, security, vulnerabilities, and bugs based on the latest commit to SonarCloud. We also used the C\# linting tool \textit{code-cracker}, but this was only used when building on developer machines and not a part of the workflow. Furthermore, we have used Snyk for scanning the project, which er not a part of the workflow either.
 
 \subsubsection{Test}
 We have different tests as a quality gate before deploying and releasing. First, we have smoke test to verify that the most important elements of the application is functioning. Second, we use Selenium for end-to-end tests. Last, we use integration test in order to test the API.
@@ -73,7 +73,7 @@ If the tests are successful the push will be deployed. We have omitted code revi
 After deploying the application we use Versionize and Husky for automatic releases on Github.
 
 \subsection{Repository organization}
-We use a monorepository for all our source code, both frontend and backend. As mentioned we have a trunk based development, which means that developers push directly to the main branch. If the commits passes the Github Workflow, then it will be released. We omitted code reviews because we thought it took too much time to do them, and since we often worked together physically, we mostly already knew what each other had written. Initially we considered using it for knowledge sharing, but since we were already set on using pair programming, we already had a way of knowledge sharing. Since we did not have code reviews we wanted to be able to release code as fast as possible.
+We use a monorepository for our source code, both frontend and backend. As mentioned we have a trunk based development, which means that developers push directly to the main branch. If the commits passes the Github Workflow, then it will be released. We omitted code reviews because we thought it took too much time to do them, and since we often worked together physically, we mostly already knew what each other had written. Initially we considered using it for knowledge sharing, but since we were already set on using pair programming, we already had a way of knowledge sharing. Since we did not have code reviews we wanted to be able to release code as fast as possible.
 
 \subsection{Development Process}
 To track issues and which tasks needed to be done, we have to some degree utilized Github Projects, which provides Kanban boards. We have not used this feature rigorously, since the course structure already provided some structure of what needed to be done when. The main usage has been when we have split our group up in many parts (individual work), and needed to keep track of it. Mostly development has happened in group work, either all together or split in two groups with knowledge sharing. Since our project and group size are manageable, it is still possible to hold developers accountable by looking at commit history. A more rigorous use of the Kanban board would however have made it possible to retroactively measure system progress. 
