--- a/report/1_system_perspective.tex
+++ b/report/1_system_perspective.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{System Perspective}
 
 %A description and illustration of the:
@@ -18,11 +19,13 @@ The technologies we selected to recreate the legacy flask application ITU-MiniTw
 
 We used Razor pages to render the web pages on the server side. We also considered creating a single page application as a frontend, such as with Blazor or React, as this would be the more modern approach. However we stuck to using Razor pages as we wanted to replicate the original Flask application as much as possible.
 
-Figure \ref{fig:architecture} shows the architecture of the final version of the system that was deployed, using three droplets (virtual machine) on DigitalOcean. Docker containers are within a docker swarm and communicate via the internal overlay network. There are three replicas of the MiniTwit server in the swarm, one on each droplet, to ensure availability. The two worker nodes only contain an instance of the MiniTwit server, the manager contains the services for load balancing, logging and monitoring. We decided to keep all these services on the same node so they are accessible on the same IP address. Nginx is used for load balancing between the MiniTwit instances. The database was hosted as a DigitalOcean managed database so that it was guaranteed to be reliable. Initially, we managed the postgres database ourselves, however one day it suddenly crashed causing approximately 12 hours of downtime. To avoid worrying about this we decided to switch to a managed database in our deployment. Running our \textit{infrastructure.sh} script, which deploys the entire system and provisions the infrastructure on DigitalOcean, will make the database as a container in the swarm though.
+\todo{skriv om simulator api'en og lav diagram over appen}
+
+Figure \ref{fig:architecture} shows the architecture of the final version of the system that was deployed, using three droplets (virtual machine) on DigitalOcean. Docker containers are within a docker swarm and communicate via the internal overlay network. There are three replicas of the MiniTwit server in the swarm, one on each droplet, to ensure availability. The two worker nodes only contain an instance of the MiniTwit server, the manager contains the services for load balancing, logging and monitoring. We decided to keep all these services on the same node so they are accessible on the same IP address. Nginx is used for load balancing between the MiniTwit instances. The database was hosted as a DigitalOcean managed database so that it was guaranteed to be reliable. Initially, we managed the postgres database ourselves, however one day it suddenly crashed causing approximately 12 hours of downtime. To avoid worrying about this we decided to switch to a managed database in our deployment. Running our \textit{infrastructure.sh} script, which deploys the entire system and provisions the infrastructure on DigitalOcean, will make the database as a container in the swarm though. Rolling updates are implemented through docker swarm.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{images/architecture.png}
+    \includegraphics[width=\textwidth]{images/architecture2.png}
     \caption{Architecture of the final system.}
     \label{fig:architecture}
 \end{figure}
@@ -61,11 +64,23 @@ The technologies we have decided on for the system to rely on are listed below. 
 
 \subsection{Important interactions of subsystems}
 
-Prometheus only read from the one of the MiniTwit server instances. Since the load is balanced this means that only 1/3 of the traffic is monitored by metrics. This is not optimal, since it does not give all of the information, however it does present a sort of snippet of the systems' monitoring.
+Figure \ref{fig:architecture} shows the interactions of the subsystems. Docker containers communicate via the internal network within the swarm.
 
-\todo[inline]{Er der mere til interactions?}
+A shortcoming of the architecture have chosen is that Prometheus only reads from one of the MiniTwit server instances, the one on the same node. Since the load is balanced this means that only 1/3 of the traffic is monitored by metrics. This is not optimal, since it does not give all of the information, however it does present a sort of snippet of the systems' monitoring.
+
+\todo[inline]{Er der mere til interactions mellem subsystems?}
 
 \subsection{Current state of systems}
-\todo[inline]{Indrag sonarcloud, Indrag screenshots fra grafana?}
-
 Due to our project utilizing infrastructure as code, it is possible to easily and quickly turn the system on/off. At the time of writing this report, we have turned the system off to minimize payments to Digital Ocean. When turning our system on, everything works as expected. However, there is little to no traffic, since the simulator has stopped. 
+
+The current code quality can be seen on our SonarQube page, which is showcased in figure \ref{fig:sonarQubeOverview}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{images/sonarStats.png}
+    \caption{An overview of the code quality of the project in SonarQube.}
+    \label{fig:sonarQubeOverview}
+\end{figure}
+
+\subsection{License of our systems}
+As we use the MIT license, and most of the direct dependencies use AGPLV3, we do not have any license conflicts.
