--- a/report/main.tex
+++ b/report/main.tex
@@ -6,25 +6,16 @@
 \usepackage{outlines}
 \usepackage{todonotes}
 \usepackage{enumitem}
+\usepackage{url}
 \setlist{nolistsep}
 \linespread{1.2}
 \usepackage[a4paper, lmargin=0.1666\paperwidth, rmargin=0.1666\paperwidth, tmargin=0.1111\paperheight, bmargin=0.1111\paperheight]{geometry}
 
 \title{DevOps - Group M}
-\author{VORES NAVNE }
-\date{May 2023}
-
-%\newcommand{\charactercount}[1]{
-%\immediate\write18{
-%    expr `texcount -1 -sum -merge #1.tex` + `texcount -1 -sum -merge -char #1.tex` - 1 
-%    > chars.txt
-%}\input{chars.txt}}
-
-%\newcommand{\wordcount}[1]{%
-%  \immediate\write18{
-%    expr `texcount -1 -sum -merge #1.tex`
-%    > words.txt
-%  }\input{words.txt}}
+\author{ Casper Wassar Skourup - caws@itu.dk\\ Lukas Hjelmstrand - luhj@itu.dk \\ Mads Piriwe Risom Andersen - mpia@itu.dk \\ Niclas Søgaard Hjortkjær - nihj@itu.dk \\ Villum Nils Robert Sonne - vson@itu.dk }
+\date{24/05-2023 \\ \vspace{4cm}
+\texttt{DevOps, Software Evolution and Software Maintenance, BSc} \\\texttt{Course code: BSDSESM1KU}
+\\ \vspace*{\fill} Github link: \url{https://github.com/NiclasHjortkjaer/itu-minitwit} \\ Webite link: \url{http://jasonderulo.live} \\ Simulator link: \url{http://jasonderulo.live/simulator}}
 
 \begin{document}
 
@@ -33,11 +24,6 @@
 \input{1_system_perspective}
 \input{2_process_perspective}
 \input{3_lessons_learned_perspective}
-
-%\textcolor{red}{This text contains \charactercount{main} - \charactercount{4_appendix} = Calculate yourself...  characters.} \\
-%\textcolor{red}{This text contains \wordcount{main} - \wordcount{4_appendix} = Calculate yourself...  words.} \\
-
-
 \input{4_appendix}
 
 
